--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,7 +18,7 @@ jwtpassword:
   source: cheerupBE2
 
 logging:
-  level:git 
+  level:
     org.hibernate.SQL: debug
 
 kakao:
@@ -26,5 +26,5 @@ kakao:
   client.id: fbe429887ccaa8b1ee741eaedb0fad31
   client.secret: 3SjTZhmIIm0Hon085OdufmyKrYBqf19N
   redirect.url: http://localhost:8080/oauth/kakao/callback
-  request.url: https://kauth.kakao.com/oauth/tokena
+  request.url: https://kauth.kakao.com/oauth/token
   user_me.url: https://kapi.kakao.com/v2/user/me
