--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,9 @@ dependencies {
 
     //JSON
     implementation 'com.google.code.gson:gson:2.8.7'
+
+    implementation 'javax.persistence:javax.persistence-api:2.2' // 또는 현재 사용 중인 JPA 스펙 버전에 맞게 수정
+
 }
 
 tasks.named('test') {
