--- a/build.gradle
+++ b/build.gradle
@@ -59,3 +59,7 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+tasks.named('bootJar'){
+    mainClass = 'com.github.shoppingmallproject.ShoppingMallProjectApplication'
+}
