- 트랜잭션매니저 JPA방식으로 수정 - 매일 자정 탈퇴한지 7일된 회원 계정 삭제 - 매일 자정 판매종료일 확인후 판매종료로 변경 - 주문로직 일부 수정   (판매종료인 상품 주문불가,   상품의 모든옵션값의 재고가 0이 되었을때    판매종료로 변경)

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,6 +20,9 @@ jwtpassword:
 logging:
   level:
     org.hibernate.SQL: debug
+    org:
+      springframework:
+        transaction.interceptor: TRACE
 
 kakao:
   grant_type: authorization_code
