--- a/.github/workflows/bepo-action.yml
+++ b/.github/workflows/bepo-action.yml
@@ -26,7 +26,7 @@ jobs:
           cd /home/ubuntu/spring/supingmall-be
           #!/bin/bash
 
-          git pull origin develop
+          git pull origin feature-sihu-test
 
           OLD_PID=$(pgrep -f "java -jar ./build/libs/shopping-mall-project-0.0.1-SNAPSHOT.jar")
           if [ -n "$OLD_PID" ]; then
