--- a/.github/workflows/bepo-action.yml
+++ b/.github/workflows/bepo-action.yml
@@ -1,11 +1,9 @@
 name: Deploy on Pull Request
 
 on:
-  pull_request:
-    types:
-      - closed
+  push:
     branches:
-      - develop
+      - feature-sihu-test
 
 jobs:
   deploy:
