--- a/.github/workflows/bepo-action.yml
+++ b/.github/workflows/bepo-action.yml
@@ -1,38 +1,38 @@
-name: Deploy on Pull Request
-
-on:
-  push:
-    branches:
-      - feature-sihu-test
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Java
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'adopt'
-          java-version: '17'
-
-      - name: Build and deploy
-        run: |
-          cd /home/ubuntu/spring/supingmall-be
-          git pull origin feature-sihu-test
-          OLD_PID=$(pgrep -f "java -jar ./build/libs/shopping-mall-project-0.0.1-SNAPSHOT.jar")
-          if [ -n "$OLD_PID" ]; then
-              echo "서버 중지중 PID $OLD_PID..."
-              kill -15 "$OLD_PID"
-              sleep 5
-          fi
-          echo "빌드시작"
-          ./gradlew bootJar
-          echo "빌드완료"
-          
-          nohup java -jar ./build/libs/shopping-mall-project-0.0.1-SNAPSHOT.jar >> /dev/null 2>&1 &
-          echo "서버 시작"
-          echo "재배포 완료."
+#name: Deploy on Pull Request
+#
+#on:
+#  push:
+#    branches:
+#      - feature-sihu-test
+#
+#jobs:
+#  deploy:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v2
+#
+#      - name: Set up Java
+#        uses: actions/setup-java@v2
+#        with:
+#          distribution: 'adopt'
+#          java-version: '17'
+#
+#      - name: Build and deploy
+#        run: |
+#          cd /home/ubuntu/spring/supingmall-be
+#          git pull origin feature-sihu-test
+#          OLD_PID=$(pgrep -f "java -jar ./build/libs/shopping-mall-project-0.0.1-SNAPSHOT.jar")
+#          if [ -n "$OLD_PID" ]; then
+#              echo "서버 중지중 PID $OLD_PID..."
+#              kill -15 "$OLD_PID"
+#              sleep 5
+#          fi
+#          echo "빌드시작"
+#          ./gradlew bootJar
+#          echo "빌드완료"
+#
+#          nohup java -jar ./build/libs/shopping-mall-project-0.0.1-SNAPSHOT.jar >> /dev/null 2>&1 &
+#          echo "서버 시작"
+#          echo "재배포 완료."
