--- a/.github/workflows/bepo-action.yml
+++ b/.github/workflows/bepo-action.yml
@@ -22,5 +22,7 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew clean build
 
+      - name: testDied
+        run: chmod +x scriptt/bepo.sh
       - name: test
         run: ./scriptt/bepo.sh
