--- a/appspec.yml
+++ b/appspec.yml
@@ -2,14 +2,14 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ubuntu/spring/supingmall-be  # 수정된 디렉토리 경로
+    destination: /home/ubuntu/spring/supingmall-be
     overwrite: yes
 
 permissions:
   - object: /
     pattern: "**"
-    owner: ubuntu  # 수정된 사용자
-    group: ubuntu  # 수정된 그룹
+    owner: ubuntu
+    group: ubuntu
 
 hooks:
   AfterInstall:
