--- a/build.gradle
+++ b/build.gradle
@@ -56,10 +56,12 @@ dependencies {
 
 }
 
+
+
 tasks.named('test') {
     useJUnitPlatform()
 }
 
-tasks.named('bootJar'){
-    mainClass = 'com.github.shoppingmallproject.ShoppingMallProjectApplication'
-}
+//tasks.named('bootJar'){
+//    mainClass = 'com.github.shoppingmallproject.ShoppingMallProjectApplication'
+//}
