--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,9 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
-//tasks.named('bootJar'){
-//    mainClass = 'com.github.shoppingmallproject.ShoppingMallProjectApplication'
-//}
+tasks.named('bootJar'){
+    mainClass = 'com.github.shoppingmallproject.ShoppingMallProjectApplication'
+    archivesBaseName = '프로젝트이름'
+    archiveFileName = '원하는파일명.jar'
+    archiveVersion = "0.0.3"
+}
